--- a/Modules/M-02-Maths and Statistics/D-02-Precalculus/Quiz_1_Lin_Alg.ipynb
+++ b/Modules/M-02-Maths and Statistics/D-02-Precalculus/Quiz_1_Lin_Alg.ipynb
@@ -13,12 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do your imports here\n",
-    "import numpy as np"
+    "#Do your imports here"
    ]
   },
   {
@@ -30,27 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-1-fa222c5e6d56>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-fa222c5e6d56>\"\u001b[1;36m, line \u001b[1;32m14\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# type a function that given a 3_dimensional vector it is able to calculate its magnitude\n",
     "\n",
     "def magnitude_3(a,b,c):\n",
-    "    magnitude = np.sqrt(a*a + b*b + c*c)\n",
-    "    return magnitude\n",
+    "    \n",
+    "    X = [a, b, c]\n",
+    "    \n",
+    "    return np.linalg.norm(X)\n",
     "\n",
-    "\n",
-    "print(magnitude_3(3, 5, 2))\n",
     "# type a function that given a n_dimensional vector it is able to calculate its magnitude\n",
     "# if you want to try this from python (not jupyter notebook) https://docs.python.org/3/library/argparse.html would be a good addition\n",
     "# if you are doing this from a jupyter notebook only, you can try to promt the user for an input  \n",
@@ -114,6 +104,13 @@
     "    #checks that size is equal\n",
     "    \n",
     "    #returns the magnitude\n",
+    "    size_a = a.size\n",
+    "    size_b = b.size\n",
+    "    \n",
+    "    try:\n",
+    "        size_a == size_b\n",
+    "        sumab = a + b\n",
+    "        return np.linalg.norm(sumab)\n",
     "    \n",
     "# or if you want to do it all in one batch:\n",
     "def magdir_vectors(a, b):\n",
@@ -142,15 +139,23 @@
    "source": [
     "def alpha_magnitude(alpha, b):\n",
     "    \n",
-    "    #returns the resulting magnitude, if the direction has changed and what has happened to the vector"
+    "    #returns the resulting magnitude, if the direction has changed and what has happened to the vector\n",
+    "     b = np.array(b)\n",
+    "    vector = alpha * b\n",
+    "    if np.sign(b[0]) == np.sign(vector[0]):\n",
+    "        print('No change in Direction')\n",
+    "    else:\n",
+    "        print('The direction has changed 180 degrees')\n",
+    "    return (vector, np.linalg.norm(vector))\n",
+    "    "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Strive_School_AI_March_2021",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "strive_school-ai_march_2021"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -162,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
