--- a/Modules/M-02-Maths and Statistics/D-02-Precalculus/Quiz_1_Lin_Alg.ipynb
+++ b/Modules/M-02-Maths and Statistics/D-02-Precalculus/Quiz_1_Lin_Alg.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do your imports here"
+    "#Do your imports here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -167,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
